[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wangantool-arl"
version = "3.0.0"
description = "ARL (Asset Reconnaissance Lighthouse) 现代化资产侦察系统 - 基于 Python 3.13.7 / FastAPI / asyncio 重写"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "wangantool" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "motor>=3.6.0",
    "httpx[http2]>=0.27.0",
    "dnspython>=2.7.0",
    "tld>=0.13.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "PyYAML>=6.0.2",
    "APScheduler>=3.10.4",
    "python-nmap>=0.7.1",
    "geoip2>=4.8.0",
    "pyOpenSSL>=24.3.0",
    "mmh3>=5.0.1",
    "pyquery>=2.0.1",
    "lxml>=5.3.0",
    "openpyxl>=3.1.5",
    "psutil>=6.1.0",
    "croniter>=3.0.3",
    "loguru>=0.7.2",
    "colorlog>=6.9.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
